@@ -1,5 +1,9 @@
 2009-07-15 Rodrigo Kumpera  <rkumpera@novell.com>
 
+	* EnumBuilder.cs: Use new derived types for array, pointer and byref.
+
+2009-07-15 Rodrigo Kumpera  <rkumpera@novell.com>
+
 	* GenericTypeParameterBuilder.cs (MakeByRefType): Return an instance
 	of PointerType instead of relying on the runtime for it.
 
